--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 node_modules
 coverage
 .vscode
+logs
+*.log
+npm-debug.log*
+.eslintcache
+/coverage
+/dist
+/local
+/reports
+/node_modules
+.DS_Store
+Thumbs.db
+.idea
+*.iml
+*.sublime-project
+*.sublime-workspace
