--- a/package.json
+++ b/package.json
@@ -2,22 +2,79 @@
   "name": "cssnano-webpack-plugin",
   "version": "1.0.3",
   "description": "cssnano plugin for Webpack",
-  "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lneveu/cssnano-webpack-plugin.git"
+  "license": "MIT",
+  "repository": "webpack-contrib/cssnano-webpack-plugin",
+  "author": "Loann Neveu",
+  "homepage": "https://github.com/webpack-contrib/cssnano-webpack-plugin",
+  "bugs": "https://github.com/webpack-contrib/cssnano-webpack-plugin/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/webpack"
+  },
+  "main": "dist/cjs.js",
+  "engines": {
+    "node": ">= 10.13.0"
   },
   "scripts": {
+    "start": "npm run build -- -w",
+    "clean": "del-cli dist",
+    "prebuild": "npm run clean",
+    "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
+    "commitlint": "commitlint --from=master",
+    "security": "npm audit",
+    "lint:prettier": "prettier \"{**/*,*}.{js,json,md,yml,css,ts}\" --list-different",
+    "lint:js": "eslint --cache .",
+    "lint": "npm-run-all -l -p \"lint:**\"",
+    "test:only": "cross-env NODE_ENV=test jest",
+    "test:watch": "npm run test:only -- --watch",
+    "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
+    "pretest": "npm run lint",
     "test": "npm run test:coverage",
-    "test:only": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --collectCoverageFrom=\"src/**/*.js\" --coverage"
+    "prepare": "npm run build",
+    "release": "standard-version",
+    "defaults": "webpack-defaults"
   },
-  "author": "Loann Neveu",
-  "license": "MIT",
   "files": [
-    "src"
+    "dist"
   ],
+  "peerDependencies": {
+    "webpack": "^4.0.0 || ^5.0.0"
+  },
+  "dependencies": {
+    "cssnano": "^4.1.10",
+    "schema-utils": "^2.7.0",
+    "webpack-sources": "^1.4.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@webpack-contrib/defaults": "^6.3.0",
+    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
+    "babel-jest": "^26.1.0",
+    "commitlint-azure-pipelines-cli": "^1.0.3",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
+    "del": "^5.1.0",
+    "del-cli": "^3.0.1",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
+    "jest-junit": "^11.0.1",
+    "lint-staged": "^10.2.11",
+    "memfs": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
+    "sass-loader": "^9.0.2",
+    "standard-version": "^8.0.2",
+    "webpack": "^4.44.0"
+  },
   "keywords": [
     "cssnano",
     "css",
@@ -29,21 +86,5 @@
     "minifier",
     "optimize",
     "optimizer"
-  ],
-  "dependencies": {
-    "cssnano": "^4.1.10",
-    "webpack-sources": "^1.4.3"
-  },
-  "peerDependencies": {
-    "webpack": "^4.0.0"
-  },
-  "devDependencies": {
-    "css-loader": "^3.4.0",
-    "jest": "^24.9.0",
-    "memory-fs": "^0.4.1",
-    "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^7.3.1",
-    "webpack": "^4.41.3"
-  }
+  ]
 }
