--- a/package.json
+++ b/package.json
@@ -41,9 +41,13 @@
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
+    "cacache": "^15.0.5",
     "cssnano": "^4.1.10",
+    "find-cache-dir": "^3.3.1",
+    "jest-worker": "^26.1.0",
     "p-limit": "^3.0.2",
     "schema-utils": "^2.7.0",
+    "serialize-javascript": "^4.0.0",
     "source-map": "^0.6.1",
     "webpack-sources": "^1.4.3"
   },
