--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "cacache": "^15.0.5",
     "cssnano": "^4.1.10",
     "find-cache-dir": "^3.3.1",
-    "jest-worker": "^26.1.0",
+    "jest-worker": "^26.2.0",
     "p-limit": "^3.0.2",
     "schema-utils": "^2.7.0",
     "serialize-javascript": "^4.0.0",
@@ -59,8 +59,9 @@
     "@commitlint/config-conventional": "^9.1.1",
     "@webpack-contrib/defaults": "^6.3.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^26.1.0",
+    "babel-jest": "^26.2.0",
     "commitlint-azure-pipelines-cli": "^1.0.3",
+    "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "del": "^5.1.0",
@@ -69,17 +70,18 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
+    "jest": "^26.2.0",
     "jest-junit": "^11.0.1",
     "lint-staged": "^10.2.11",
     "memfs": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.32",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.2",
     "standard-version": "^8.0.2",
-    "webpack": "^4.44.0"
+    "webpack": "^4.44.1"
   },
   "keywords": [
     "cssnano",
