--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "@webpack-contrib/defaults": "^6.3.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^26.3.0",
+    "clean-css": "^4.2.3",
     "commitlint-azure-pipelines-cli": "^1.0.3",
     "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
+    "csso": "^4.0.3",
     "del": "^5.1.0",
     "del-cli": "^3.0.1",
     "eslint": "^7.7.0",
