--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
-    "prepare": "npm run build",
+    "prepare": "husky install && npm run build",
     "release": "standard-version",
     "defaults": "webpack-defaults"
   },
@@ -52,22 +52,22 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@webpack-contrib/defaults": "^6.3.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^26.3.0",
-    "clean-css": "^4.2.3",
-    "copy-webpack-plugin": "^6.4.1",
+    "clean-css": "^5.1.1",
+    "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "csso": "^4.0.3",
     "del": "^6.0.0",
     "del-cli": "^3.0.1",
     "eslint": "^7.9.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.0",
-    "husky": "^4.3.0",
+    "husky": "^5.1.3",
     "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
     "memfs": "^3.2.0",
@@ -76,7 +76,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
     "prettier": "^2.1.2",
-    "sass-loader": "^10.0.2",
+    "sass-loader": "^11.0.1",
     "standard-version": "^9.0.0",
     "sugarss": "^3.0.3",
     "webpack": "^5.25.0"
