--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
     "lint-staged": "^10.4.0",
     "memfs": "^3.2.0",
     "mini-css-extract-plugin": "^1.3.3",
-    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
     "prettier": "^2.1.2",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "standard-version": "^9.0.0",
     "sugarss": "^3.0.3",
