feat: added the ability to pass an array of functions to the minify

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "npm-run-all -l -p \"lint:**\"",
     "test:only": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test:only -- --watch",
-    "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
+    "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/{!(utils),}.js\" --coverage",
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
     "prepare": "husky install && npm run build",
