--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "main": "dist/cjs.js",
   "engines": {
-    "node": ">= 10.13.0"
+    "node": ">= 12.13.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
@@ -31,8 +31,7 @@
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
     "prepare": "husky install && npm run build",
-    "release": "standard-version",
-    "defaults": "webpack-defaults"
+    "release": "standard-version"
   },
   "files": [
     "dist"
@@ -58,36 +57,36 @@
     "source-map": "^0.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@commitlint/cli": "^12.1.3",
+    "@commitlint/config-conventional": "^12.1.3",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^26.6.3",
     "clean-css": "^5.1.2",
     "copy-webpack-plugin": "^8.1.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.2.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "cssnano-preset-simple": "^2.0.0",
-    "csso": "^4.0.3",
+    "csso": "^4.2.0",
     "del": "^6.0.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.0",
-    "husky": "^5.1.3",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.4.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^11.0.0",
     "memfs": "^3.2.2",
-    "mini-css-extract-plugin": "^1.4.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "standard-version": "^9.2.0",
+    "prettier": "^2.3.0",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.1.0",
+    "standard-version": "^9.3.0",
     "sugarss": "^3.0.3",
-    "webpack": "^5.31.2"
+    "webpack": "^5.37.0"
   },
   "keywords": [
     "cssnano",
