--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://opencollective.com/webpack"
   },
   "main": "dist/cjs.js",
+  "types": "types/cjs.d.ts",
   "engines": {
     "node": ">= 12.13.0"
   },
@@ -19,11 +20,14 @@
     "start": "npm run build -- -w",
     "clean": "del-cli dist",
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
+    "build:types": "tsc --declaration --emitDeclarationOnly --outDir types && prettier \"types/**/*.ts\" --write && prettier types --write",
+    "build:code": "cross-env NODE_ENV=production babel src -d dist --copy-files",
+    "build": "npm-run-all -p \"build:**\"",
     "commitlint": "commitlint --from=master",
     "security": "npm audit",
     "lint:prettier": "prettier \"{**/*,*}.{js,json,md,yml,css,ts}\" --list-different",
     "lint:js": "eslint --cache .",
+    "lint:types": "tsc --pretty --noEmit",
     "lint": "npm-run-all -l -p \"lint:**\"",
     "test:only": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test:only -- --watch",
@@ -34,7 +38,8 @@
     "release": "standard-version"
   },
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "peerDependencies": {
     "webpack": "^5.0.0"
@@ -51,6 +56,7 @@
     }
   },
   "dependencies": {
+    "@types/cssnano": "^4.0.1",
     "cssnano": "^5.0.6",
     "jest-worker": "^27.0.2",
     "postcss": "^8.3.5",
@@ -64,6 +70,9 @@
     "@babel/preset-env": "^7.15.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@types/clean-css": "^4.2.5",
+    "@types/csso": "^4.2.0",
+    "@types/serialize-javascript": "^5.0.1",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^27.0.6",
     "clean-css": "^5.1.5",
@@ -89,6 +98,7 @@
     "sass-loader": "^12.1.0",
     "standard-version": "^9.3.0",
     "sugarss": "^4.0.1",
+    "typescript": "^4.5.2",
     "webpack": "^5.50.0"
   },
   "keywords": [
