--- a/package.json
+++ b/package.json
@@ -56,53 +56,57 @@
     },
     "@parcel/css": {
       "optional": true
+    },
+    "lightningcss": {
+      "optional": true
     }
   },
   "dependencies": {
-    "cssnano": "^5.1.13",
+    "cssnano": "^5.1.8",
     "jest-worker": "^27.5.1",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.13",
     "schema-utils": "^4.0.0",
     "serialize-javascript": "^6.0.0",
     "source-map": "^0.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@parcel/css": "^1.13.0",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.12",
+    "@babel/preset-env": "^7.17.12",
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "@parcel/css": "^1.8.3",
     "@types/clean-css": "^4.2.5",
     "@types/csso": "^5.0.0",
     "@types/serialize-javascript": "^5.0.2",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^28.1.2",
-    "clean-css": "^5.3.1",
+    "babel-jest": "^28.1.0",
+    "clean-css": "^5.3.0",
     "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "cssnano-preset-simple": "^4.0.0",
-    "csso": "^5.0.5",
-    "del": "^6.1.1",
-    "del-cli": "^4.0.0",
-    "esbuild": "^0.14.54",
-    "eslint": "^8.23.0",
+    "csso": "^5.0.3",
+    "del": "^6.1.0",
+    "del-cli": "^5.0.0",
+    "esbuild": "^0.15.7",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "lint-staged": "^12.5.0",
-    "memfs": "^3.4.7",
-    "mini-css-extract-plugin": "^2.6.1",
+    "jest": "^28.1.0",
+    "lightningcss": "^1.14.0",
+    "lint-staged": "^12.4.1",
+    "memfs": "^3.4.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.8",
-    "sass-loader": "^13.0.2",
+    "prettier": "^2.6.2",
+    "sass": "^1.51.0",
+    "sass-loader": "^13.0.0",
     "standard-version": "^9.5.0",
     "sugarss": "^4.0.1",
-    "typescript": "^4.8.2",
-    "webpack": "^5.74.0"
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1"
   },
   "keywords": [
     "cssnano",
