chore: add cSpell to check spelling issues

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "security": "npm audit",
     "lint:prettier": "prettier \"{**/*,*}.{js,json,md,yml,css,ts}\" --list-different",
     "lint:js": "eslint --cache .",
+    "lint:spelling": "cspell \"**/*.*\"",
     "lint:types": "tsc --pretty --noEmit",
     "lint": "npm-run-all -l -p \"lint:**\"",
     "test:only": "cross-env NODE_ENV=test jest",
@@ -88,6 +89,7 @@
     "clean-css": "^5.3.0",
     "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^7.0.3",
+    "cspell": "^6.14.3",
     "css-loader": "^6.7.1",
     "cssnano-preset-simple": "^4.0.0",
     "csso": "^5.0.3",
