--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@swc/css": "^0.0.18",
     "@types/clean-css": "^4.2.5",
     "@types/csso": "^5.0.0",
+    "@types/node": "^18.11.18",
     "@types/serialize-javascript": "^5.0.2",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.3.1",
@@ -111,7 +112,7 @@
     "sass-loader": "^13.2.0",
     "standard-version": "^9.5.0",
     "sugarss": "^4.0.1",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   },
   "keywords": [
