--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "css-minimizer-webpack-plugin",
   "version": "4.2.2",
-  "description": "cssnano plugin for Webpack",
+  "description": "CSS minimizer (minifier) plugin for Webpack",
   "license": "MIT",
   "repository": "webpack-contrib/css-minimizer-webpack-plugin",
   "author": "Loann Neveu",
