--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -87,6 +87,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm ci
