--- a/package.json
+++ b/package.json
@@ -69,12 +69,12 @@
     }
   },
   "dependencies": {
+    "@jridgewell/trace-mapping": "^0.3.18",
     "cssnano": "^6.0.1",
     "jest-worker": "^29.4.3",
     "postcss": "^8.4.24",
     "schema-utils": "^4.0.1",
-    "serialize-javascript": "^6.0.1",
-    "source-map": "^0.6.1"
+    "serialize-javascript": "^6.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
@@ -113,6 +113,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
+    "source-map": "^0.6.1",
     "standard-version": "^9.5.0",
     "sugarss": "^4.0.1",
     "typescript": "^5.0.4",
