--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "fix:js": "npm run lint:js -- --fix",
     "fix:prettier": "npm run lint:prettier -- --write",
     "fix": "npm-run-all -l fix:js fix:prettier",
-    "test:only": "cross-env NODE_ENV=test jest",
+    "test:only": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "npm run test:only -- --watch",
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
@@ -69,19 +69,19 @@
     }
   },
   "dependencies": {
-    "@jridgewell/trace-mapping": "^0.3.19",
+    "@jridgewell/trace-mapping": "^0.3.21",
     "cssnano": "^6.0.3",
     "jest-worker": "^29.7.0",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
     "schema-utils": "^4.2.0",
-    "serialize-javascript": "^6.0.1"
+    "serialize-javascript": "^6.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@babel/preset-env": "^7.23.8",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@parcel/css": "^1.8.3",
     "@swc/css": "^0.0.20",
     "@types/clean-css": "^4.2.11",
@@ -91,29 +91,29 @@
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.7.0",
     "clean-css": "^5.3.3",
-    "copy-webpack-plugin": "^9.1.0",
+    "copy-webpack-plugin": "^12.0.1",
     "cross-env": "^7.0.3",
-    "cspell": "^6.27.0",
-    "css-loader": "^6.8.1",
+    "cspell": "^8.3.2",
+    "css-loader": "^6.9.0",
     "cssnano-preset-simple": "^4.0.0",
     "csso": "^5.0.3",
     "del": "^6.1.0",
     "del-cli": "^5.1.0",
-    "esbuild": "^0.17.19",
+    "esbuild": "^0.19.11",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lightningcss": "^1.22.1",
-    "lint-staged": "^13.2.2",
-    "memfs": "^3.5.1",
-    "mini-css-extract-plugin": "^2.7.6",
+    "lightningcss": "^1.23.0",
+    "lint-staged": "^15.2.0",
+    "memfs": "^4.6.0",
+    "mini-css-extract-plugin": "^2.7.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.2",
     "sass": "^1.69.7",
-    "sass-loader": "^13.3.3",
-    "source-map": "^0.6.1",
+    "sass-loader": "^14.0.0",
+    "source-map": "^0.7.4",
     "standard-version": "^9.5.0",
     "sugarss": "^4.0.1",
     "typescript": "^5.3.3",
