--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "build": "npm-run-all -p \"build:**\"",
     "commitlint": "commitlint --from=master",
     "security": "npm audit",
-    "lint:prettier": "prettier \"{**/*,*}.{js,json,md,yml,css,ts}\" --list-different",
+    "lint:prettier": "prettier --cache --list-different .",
     "lint:js": "eslint --cache .",
-    "lint:spelling": "cspell \"**/*.*\"",
+    "lint:spelling": "cspell --cache --no-must-find-files --quiet \"**/*.*\"",
     "lint:types": "tsc --pretty --noEmit",
     "lint": "npm-run-all -l -p \"lint:**\"",
     "fix:js": "npm run lint:js -- --fix",
@@ -83,10 +83,10 @@
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@parcel/css": "^1.8.3",
-    "@swc/css": "^0.0.20",
+    "@swc/css": "^0.0.28",
     "@types/clean-css": "^4.2.11",
     "@types/csso": "^5.0.4",
-    "@types/node": "^18.16.3",
+    "@types/node": "^20.11.5",
     "@types/serialize-javascript": "^5.0.4",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.7.0",
@@ -110,7 +110,7 @@
     "memfs": "^4.6.0",
     "mini-css-extract-plugin": "^2.7.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.4",
     "sass": "^1.69.7",
     "sass-loader": "^14.0.0",
     "source-map": "^0.7.4",
