--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "fix:js": "npm run lint:js -- --fix",
     "fix:prettier": "npm run lint:prettier -- --write",
     "fix": "npm-run-all -l fix:js fix:prettier",
-    "test:only": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:only": "cross-env NODE_ENV=test NODE_OPTIONS=\"--experimental-vm-modules\" jest",
     "test:watch": "npm run test:only -- --watch",
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
@@ -113,7 +113,6 @@
     "prettier": "^3.2.4",
     "sass": "^1.69.7",
     "sass-loader": "^14.0.0",
-    "source-map": "^0.7.4",
     "standard-version": "^9.5.0",
     "sugarss": "^4.0.1",
     "typescript": "^5.3.3",
