--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
-    "prepare": "husky install && npm run build",
+    "prepare": "husky && npm run build",
     "release": "standard-version"
   },
   "files": [
@@ -80,8 +80,8 @@
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.2",
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
     "@parcel/css": "^1.8.3",
     "@swc/css": "^0.0.28",
     "@types/clean-css": "^4.2.11",
@@ -99,11 +99,11 @@
     "csso": "^5.0.3",
     "del": "^6.1.0",
     "del-cli": "^5.1.0",
-    "esbuild": "^0.19.12",
+    "esbuild": "^0.20.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lightningcss": "^1.23.0",
     "lint-staged": "^15.2.2",
