--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "commitlint": "commitlint --from=master",
     "security": "npm audit",
     "lint:prettier": "prettier --cache --list-different .",
-    "lint:js": "eslint --cache .",
+    "lint:code": "eslint --cache .",
     "lint:spelling": "cspell --cache --no-must-find-files --quiet \"**/*.*\"",
     "lint:types": "tsc --pretty --noEmit",
     "lint": "npm-run-all -l -p \"lint:**\"",
-    "fix:js": "npm run lint:js -- --fix",
+    "fix:code": "npm run lint:code -- --fix",
     "fix:prettier": "npm run lint:prettier -- --write",
-    "fix": "npm-run-all -l fix:js fix:prettier",
+    "fix": "npm-run-all -l fix:code fix:prettier",
     "test:only": "cross-env NODE_ENV=test NODE_OPTIONS=\"--experimental-vm-modules\" jest",
     "test:watch": "npm run test:only -- --watch",
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
@@ -72,17 +72,18 @@
     "@babel/preset-env": "^7.25.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.32.0",
     "@eslint/markdown": "^7.0.0",
     "@parcel/css": "^1.8.3",
-    "@stylistic/eslint-plugin": "^5.2.0",
+    "@stylistic/eslint-plugin": "^5.2.2",
     "@swc/css": "^0.0.28",
     "@types/clean-css": "^4.2.11",
     "@types/csso": "^5.0.4",
     "@types/node": "^20.14.9",
     "@types/serialize-javascript": "^5.0.4",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^30.0.5",
     "clean-css": "^5.3.3",
-    "copy-webpack-plugin": "^9.1.0",
+    "copy-webpack-plugin": "^13.0.0",
     "cross-env": "^7.0.3",
     "cspell": "^8.13.1",
     "css-loader": "^6.10.0",
@@ -96,10 +97,11 @@
     "eslint-config-webpack": "^4.4.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-jsdoc": "^51.4.1",
+    "eslint-plugin-jsdoc": "^52.0.0",
     "eslint-plugin-n": "^17.21.0",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-unicorn": "^60.0.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.4",
     "jest": "^30.0.5",
     "lightningcss": "^1.25.1",
@@ -111,7 +113,7 @@
     "sass": "^1.77.8",
     "sass-loader": "^16.0.5",
     "standard-version": "^9.5.0",
-    "sugarss": "^4.0.1",
+    "sugarss": "^5.0.0",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0"
   },
